@@ -1,3 +1,11 @@
+2012-10-05  Glenn Morris  <rgm@gnu.org>
+
+	* color.el (color-name-to-rgb, color-rgb-to-hex)
+	(color-hue-to-rgb, color-hsl-to-rgb, color-rgb-to-hsv)
+	(color-rgb-to-hsl, color-srgb-to-xyz, color-saturate-hsl)
+	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
+	(color-lighten-name, color-darken-hsl, color-darken-name): Doc fixes.
+
 2012-09-25  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-art.el (gnus-article-browse-delete-temp-files): Never ask again
